@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="icons"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="X:/java/swing-layout-1.0.jar"/>
-	<classpathentry kind="lib" path="X:/java/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="/home/raul/warehouse/workspace/ConfigDB_db_connection_86323_25082011/ext/swing-layout-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/raul/warehouse/workspace/ConfigDB_db_connection_86323_25082011/ext/ojdbc14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
