@@ -1,3 +1,7 @@
+2011-08-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-74
+	* Change to TNSname connection string for Oracle connections. bug 86323.
+
 2011-08-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-73
 	* Allows "DeepImport" when filtering the import list. (bug 84122).
